--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <meta property="og:url" content="https://hypertro.app/">
     <meta property="og:title" content="HYPERTRO - Build Your Legacy">
     <meta property="og:description" content="Diseña tu rutina de entrenamiento perfecta en segundos. Personaliza, organiza y comparte tu plan de gimnasio con estilo.">
-    <meta property="og:image" content="/icon.svg">
+    <meta property="og:image" content="https://hypertro.app/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary">
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="HYPERTRO - Build Your Legacy">
     <meta property="twitter:description" content="Diseña tu rutina de entrenamiento perfecta en segundos. Personaliza, organiza y comparte tu plan de gimnasio con estilo.">
-    <meta property="twitter:image" content="/icon.svg">
+    <meta property="twitter:image" content="https://hypertro.app/og-image.png">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
