Feat: Complete Workout Mode, PWA support, Social Sharing & Rebranding

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg?v=2" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HYPERTRO - Build Your Legacy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" href="/pwa-192x192.png">
+    <title>HYPERTRO - Desafía tus Límites</title>
     <meta name="description" content="Diseña tu rutina de entrenamiento perfecta en segundos. Personaliza, organiza y comparte tu plan de gimnasio con estilo.">
     
     <!-- Open Graph / Facebook -->
